tests/baselines/reference/mismatchedGenericArguments1.errors.txt
tests/cases/compiler/mismatchedGenericArguments1.ts(4,7): error TS2420: Class 'C<T>' incorrectly implements interface 'IFoo<T>'.
  Types of property 'foo' are incompatible.
    Type '(x: string) => number' is not assignable to type '<T>(x: T) => T'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'T' is not assignable to type 'string'.
tests/cases/compiler/mismatchedGenericArguments1.ts(10,7): error TS2420: Class 'C2<T>' incorrectly implements interface 'IFoo<T>'.
  Types of property 'foo' are incompatible.
    Type '<U>(x: string) => number' is not assignable to type '<T>(x: T) => T'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'T' is not assignable to type 'string'.


==== tests/cases/compiler/mismatchedGenericArguments1.ts (2 errors) ====
    interface IFoo<T> {
       foo<T>(x: T): T;
    }
    class C<T> implements IFoo<T> {
          ~
!!! error TS2420: Class 'C<T>' incorrectly implements interface 'IFoo<T>'.
!!! error TS2420:   Types of property 'foo' are incompatible.
!!! error TS2420:     Type '(x: string) => number' is not assignable to type '<T>(x: T) => T'.
!!! error TS2420:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2420:         Type 'T' is not assignable to type 'string'.
       foo(x: string): number {
         return null;
       }
    }
    
    class C2<T> implements IFoo<T> {
          ~~
!!! error TS2420: Class 'C2<T>' incorrectly implements interface 'IFoo<T>'.
!!! error TS2420:   Types of property 'foo' are incompatible.
!!! error TS2420:     Type '<U>(x: string) => number' is not assignable to type '<T>(x: T) => T'.
!!! error TS2420:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2420:         Type 'T' is not assignable to type 'string'.
       foo<U>(x: string): number {
         return null;
       }
    }
    